--- a/fluent_licon.ui
+++ b/fluent_licon.ui
@@ -52,7 +52,6 @@
        <property name="font">
         <font>
          <family>微软雅黑</family>
-         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -69,7 +68,6 @@
        <property name="font">
         <font>
          <family>微软雅黑</family>
-         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -104,25 +102,6 @@
      <property name="rightMargin">
       <number>1</number>
      </property>
-     <item row="1" column="1">
-      <widget class="ComboBox" name="comboBox">
-       <property name="font">
-        <font>
-         <family>微软雅黑</family>
-        </font>
-       </property>
-       <item>
-        <property name="text">
-         <string>Excel</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>TXT</string>
-        </property>
-       </item>
-      </widget>
-     </item>
      <item row="5" column="0" colspan="2">
       <widget class="FluentLabelBase" name="label_3">
        <property name="sizePolicy">
@@ -140,7 +119,6 @@
        <property name="font">
         <font>
          <family>微软雅黑</family>
-         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -169,7 +147,6 @@
        <property name="font">
         <font>
          <family>微软雅黑</family>
-         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -198,7 +175,6 @@
        <property name="font">
         <font>
          <family>微软雅黑</family>
-         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -263,6 +239,13 @@
        </property>
       </widget>
      </item>
+     <item row="1" column="1">
+      <widget class="ComboBox" name="ComboBox">
+       <property name="text">
+        <string>txt</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
    <widget class="QWidget" name="gridLayoutWidget_3">
@@ -292,7 +275,6 @@
        <property name="font">
         <font>
          <family>微软雅黑</family>
-         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -352,7 +334,6 @@
        <property name="font">
         <font>
          <family>微软雅黑</family>
-         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -381,7 +362,6 @@
        <property name="font">
         <font>
          <family>微软雅黑</family>
-         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -410,7 +390,6 @@
        <property name="font">
         <font>
          <family>微软雅黑</family>
-         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -439,7 +418,6 @@
        <property name="font">
         <font>
          <family>微软雅黑</family>
-         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -548,7 +526,6 @@
        <property name="font">
         <font>
          <family>微软雅黑</family>
-         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -577,7 +554,6 @@
        <property name="font">
         <font>
          <family>微软雅黑</family>
-         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -618,7 +594,7 @@
      <x>0</x>
      <y>0</y>
      <width>1112</width>
-     <height>26</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
@@ -626,13 +602,13 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>PushButton</class>
+   <class>ComboBox</class>
    <extends>QPushButton</extends>
    <header>qfluentwidgets</header>
   </customwidget>
   <customwidget>
-   <class>ComboBox</class>
-   <extends>QComboBox</extends>
+   <class>PushButton</class>
+   <extends>QPushButton</extends>
    <header>qfluentwidgets</header>
   </customwidget>
   <customwidget>
